adicao da aba sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -4,17 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="../css/styleabout.css">
 </head>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 <body>
-    <h1 class="titulo">Sobre nós</h1>
-    <p class="descricao">O Blog do Ale é um projeto desenvolvido por quatro integrantes com o objetivo de unir gastronomia e tecnologia. A proposta nasceu da ideia de criar um site de receitas culinárias utilizando HTML, CSS e JavaScript, aplicando na prática os conhecimentos de desenvolvimento web.
+    <div class="cabecalho">
+        <h1>Sobre nós</h1>
+        <img src="../img/FotoDoGrupo.jpeg" alt="foto do grupo">
+        <p class="descricao">
+            <li>O Blog do Ale é um projeto desenvolvido por quatro integrantes com o objetivo de unir gastronomia e tecnologia em um único espaço. A proposta nasceu da ideia de criar um site de receitas culinárias utilizando HTML, CSS e JavaScript, como forma de aplicar na prática os conhecimentos aprendidos em desenvolvimento web.</li>
+            <p></p>
+            <li>O grupo é formado por:</li>
+            <li>Alexandre Lício, formado em Gastronomia, responsável por compartilhar receitas e experiências do mundo culinário;;</li>
+            <li>Jéssica Toledo, João Pedro e Simone Martins, responsáveis pelo design, estrutura e funcionalidades do site, garantindo que o conteúdo seja acessível e visualmente agradável.</li>
+            <p></p>
+            <li>O Blog do Ale tem como foco a integração entre diferentes áreas do conhecimento, mostrando como a programação pode ser utilizada para dar vida a projetos criativos e funcionais. Além disso, o site busca oferecer aos visitantes uma experiência leve e intuitiva, misturando aprendizado, tecnologia e o prazer de cozinhar.</li>
+        </p>
+        <img src="../img/FotoDoXande.jpeg" alt="foto do xande">
+    </div>
+    
 
-    O grupo é formado por:
+    <footer class="rodape">
+        <div class="rodape-conteudo">
 
-    Alexandre Lício, formado em Gastronomia e responsável pelas receitas;
-    Jéssica Toledo, João Pedro e Simone Martins, responsáveis pelo design, estrutura e funcionalidades do site.
+            <div class="rodape-institucional">
+                <h3><i>Blog do Alê</i></h3>
+                <p>Acreditamos que cozinhar é um ato de amor e criatividade. Nosso objetivo é inspirar você a
+                    transformar ingredientes em experiências memoráveis.</p>
+                <p><strong>Contato:</strong> blogdoale@email.com</p>
+                <p><strong>Localização:</strong> Rio de Janeiro, Brasil</p>
+            </div>
 
-    O resultado é um espaço que combina aprendizado, criatividade e boas práticas de programação com o universo da culinária.
-    </p>
+            <div class="rodape-links">
+                <h3><i>Navegação Rápida</i></h3>
+                <ul>
+                    <li><a href="index.html"target=" blank">Home</a></li>
+                    <li><a href="receitas.html"target=" blank">Receitas</a></li>
+                    <li><a href="cursosonline.html"target=" blank">Cursos Online</a></li>
+                    <li><a href="sobre.html"target=" blank">Sobre o Blog</a></li>
+                </ul>
+            </div>
+
+            <div class="rodape-social">
+                <h3><i>Conecte-se</i></h3>
+                <div class="social-icones">
+                    <a href="https://www.instagram.com/serratecoficial" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://www.facebook.com/serratecoficial" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
+                    <a href="https://www.youtube.com/@SerratecOficial" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i> YouTube</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="rodape-direitos">
+            <p>&copy; 2025 Blog do Alê. Todos os direitos reservados. | Desenvolvido por Alexandre Lício, Jéssica Toledo, João Pedro e Simone Martins.</p>
+        </div>
+    </footer>
 </body>
 </html>
