ajustes finais na aba sobre

--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -12,7 +12,9 @@
 <body>
     <div class="cabecalho">
         <h1>Sobre nós</h1>
-        <img src="../img/FotoDoGrupo.jpeg" alt="foto do grupo">
+        <div class="grupo">
+            <img src="../img/FotoDoGrupo.jpeg" alt="foto do grupo">
+        </div>
         <p class="descricao">
             <li>O Blog do Ale é um projeto desenvolvido por quatro integrantes com o objetivo de unir gastronomia e tecnologia em um único espaço. A proposta nasceu da ideia de criar um site de receitas culinárias utilizando HTML, CSS e JavaScript, como forma de aplicar na prática os conhecimentos aprendidos em desenvolvimento web.</li>
             <p></p>
@@ -22,7 +24,9 @@
             <p></p>
             <li>O Blog do Ale tem como foco a integração entre diferentes áreas do conhecimento, mostrando como a programação pode ser utilizada para dar vida a projetos criativos e funcionais. Além disso, o site busca oferecer aos visitantes uma experiência leve e intuitiva, misturando aprendizado, tecnologia e o prazer de cozinhar.</li>
         </p>
-        <img src="../img/FotoDoXande.jpeg" alt="foto do xande">
+        <div class="xande">
+            <img src="../img/FotoDoXande.jpeg" alt="foto do xande">
+        </div>
     </div>
     
 
