--- a/pages/receitas.html
+++ b/pages/receitas.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog do Alê</title>
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/stylereceita.css">
 </head>
 <body>
@@ -90,7 +91,7 @@
                     <li>1/2 manga picada</li>
                     <li>1 maço de rúcula</li>
                     <li>1/2 cebola picada</li>
-                    <li>sal, mostarda, azeite e pimenta do reino a gosto</li>
+                    <li>sal e temperos a gosto</li>
                 </ul>
 
                 <h4>Modo de Preparo:</h4>
